--- a/Laboratories/Lab1/AlbertoLopez62_Lab1.html
+++ b/Laboratories/Lab1/AlbertoLopez62_Lab1.html
@@ -3,52 +3,7 @@
 	<head>
 		<title>Alberto Lopez</title>
 		<meta charset="utf-8">
-		<style>
-			.resume{
-				font-family: "Trebuchet MS", Helvetica, sans-serif;
-			}
-			.init{
-				text-align: center;
-			}
-			.address{
-				font-size: 75%;
-			}
-			.phone-number{
-				font-size: 75%;
-			}
-			.left {
-			  float: left;
-			  width: 75%;
-			}
-			.right {
-			  text-align: right;
-			  float: right;
-			  width: 25%;
-			}
-			.left-bottom {
-			  float: left;
-			  width: 50%;
-			}
-			.right-bottom {
-			  text-align: left;
-			  float: right;
-			  width: 50%;
-			}
-			/* Clear floats after the columns */
-			.row:after {
-			  content: "";
-			  display: table;
-			  clear: both;
-			}
-			.ProfileImage {
-				width: 80px;
-				height: 100px;
-				border-radius: 50%;
-				position: absolute;
-				top: 20px;
-				right: 0px;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="lab2.css">
 	</head>
 	<body class="resume">
 		<div class="init">
@@ -127,7 +82,7 @@
 				</div>
 				<div class="right-bottom">
 					<h4>TECHNOLOGIES</h4>
-					<ul style="list-style-type:circle;">
+					<ul class = "technologies">
 					  <li>Git/Github</li>
 					  <li>Android Studio</li>
 					  <li>Linux</li>
