Separated in folders

--- a/Laboratories/Lab1/html/AlbertoLopez62_Lab1.html
+++ b/Laboratories/Lab1/html/AlbertoLopez62_Lab1.html
@@ -3,14 +3,14 @@
 	<head>
 		<title>Alberto Lopez</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="lab2.css">
+		<link rel="stylesheet" type="text/css" href="./../css/lab2.css">
 	</head>
 	<body class="resume">
 		<div class="init">
 			<h1 class="name">Alberto López</h1>
 			<address class="address">3013 Valle Primavera, Jardines de Altavista, 64833</address>
 			<span class="phone-number">+52-312-107-7630</span>
-			<img class="ProfileImage" src="img.png" alt="Profile Image">
+			<img class="ProfileImage" src="./../img/img.png" alt="Profile Image">
 		</div>
 		<div class="education">
 			<h3>EDUCATION</h3>
