Changed some background colors

--- a/Laboratories/Lab1/html/AlbertoLopez62_Lab1.html
+++ b/Laboratories/Lab1/html/AlbertoLopez62_Lab1.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="./../css/lab2.css">
 	</head>
 	<body class="resume">
-		<div class="init">
+		<div class="personal_info">
 			<h1 class="name">Alberto López</h1>
 			<address class="address">3013 Valle Primavera, Jardines de Altavista, 64833</address>
 			<span class="phone-number">+52-312-107-7630</span>
@@ -94,7 +94,9 @@
 		<footer class="contact-info">
 			<h3>CONTACT INFO</h3>
 			<hr>
-			<a href="https://github.com/Alberto911599">Github Account</a>
+			<img class="github_icon" src="./../img/github_icon.png" alt="github">
+			<a class="github_link" href="https://github.com/Alberto911599">Github Account</a>
+			<img class="linkedin_icon" src="./../img/linkedin_icon.png" alt="linkedin">	
 			<a href="https://www.linkedin.com/in/jose-alberto-lopez-mag%C3%B1a-79b104167/">Linkedin Profile</a>
 		</footer>
 	</body>
