--- a/Laboratories/Lab4/index.html
+++ b/Laboratories/Lab4/index.html
@@ -26,10 +26,10 @@
               <div class="panel-body">
                 <form class="todoForm">
                   <fieldset>
-                    <textarea class="newTodo form-control">
+                    <input class="newTodo form-control" id="newTask">
                       
-                    </textarea>
-                    <button type="submit" class="submitButton"> 
+                    </input>
+                    <button type="submit" class="submitButton" id="btnPost"> 
                       Post Todo
                     </button>
                   </fieldset>
@@ -43,16 +43,16 @@
                 <h3>List of todo's</h3>
               </div>
               <div class="panel-body" class="listOfTodos">
-
+                  <ul id="listOfToDos"></ul>
               </div>
               <div class="buttons">
-                <button class="clearButton btn-info"> 
+                <button class="clearButton btn-info" id="btnClr"> 
                   Clear all Todo's
                 </button>
-                <button class="markAllButton btn-success"> 
+                <button class="markAllButton btn-success" id="btnSet"> 
                   Mark all Todo's
                 </button>
-                <button class="deleteButton btn-danger"> 
+                <button class="deleteButton btn-danger" id="btnDel"> 
                   Delete all Todo's
                 </button>
               </div>
@@ -64,5 +64,7 @@
     <footer role="footer" class="footer">
       Todo list application
     </footer>
+    <script src = "js/index.js"
+    type = "text/javascript"></script>
   </body>
 </html>
